--- a/css/infographic.css
+++ b/css/infographic.css
@@ -40,3 +40,9 @@
 .info-box:nth-of-type(2n) {
   background-color: var(--color-infobox-2-bg);
 }
+
+.my_scale {
+  transform: scale(1.1);
+  transform-box: fill-box;
+  transform-origin: 50% 50%;
+}
