--- a/css/infographic.css
+++ b/css/infographic.css
@@ -46,3 +46,16 @@
   transform-box: fill-box;
   transform-origin: 50% 50%;
 }
+
+#foerste,
+#anden,
+#tredje {
+  max-width: auto;
+  background-color: #74373b;
+  color: #fffae2;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 8px;
+  font-size: 20px;
+  border: none;
+}
