--- a/css/general.css
+++ b/css/general.css
@@ -67,12 +67,12 @@ h3 {
   font-size: var(--headline3-size);
 }
 
-main>h1 {
+main > h1 {
   width: calc(80% - 6rem);
 }
 
 /* NAVIGATION STRUCTURES */
-header>nav {
+header > nav {
   height: 100%;
   background-color: var(--color-menu-bg);
 }
@@ -99,12 +99,20 @@ nav a {
   height: 3.6rem;
 }
 
-#logotype-wrapper>a {
+#logotype-wrapper > a {
   color: var(--color-text-logotype);
   font-size: var(--font-logotype-size);
   font-weight: var(--font-weight-medium);
   width: max-content;
   margin-left: 1rem;
+}
+
+#logotype-wrapper svg {
+  width: 200px;
+  height: auto;
+  display: block;
+  padding: 10px;
+  margin: 10px;
 }
 
 /* Global menu */
@@ -118,7 +126,7 @@ header nav li a {
 }
 
 /* Pilen efter menu-tekst */
-header>nav li>a:after {
+header > nav li > a:after {
   content: " \2192";
 }
 
@@ -130,6 +138,7 @@ nav a:hover {
 nav a:active {
   background-color: var(--color-link-active);
 }
+*/
 
 /* FOOTER */
 footer a {
